--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Personal Portfolio of Sahil Kakwani"
+      content="Personal Portfolio of Kapil Khatri"
     />
-    <meta property="og:title" content="Sahil Kakwani">
+    <meta property="og:title" content="Kapil Khatri">
     <meta property="og:description" content="Sahil Kakwani | Full Stack Web3.0 Developer">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <meta property="og:type" content="website">
