--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Personal Portfolio of Kapil Khatri"
     />
     <meta property="og:title" content="Kapil Khatri">
-    <meta property="og:description" content="Sahil Kakwani | Full Stack Web3.0 Developer">
+    <meta property="og:description" content="Kapil Khatri">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <meta property="og:type" content="website">
     <!--
